--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,10 @@
         <div class="navbar-end">
           <% if user_signed_in? %>
           <div class="navbar-item has-dropdown is-hoverable">
-            <%= link_to 'New', '#', class: "navbar-link" %>
+           
             <div class="navbar-dropdown">
-              <%= link_to 'Project', new_project_path, class:"navbar-item" %>
-              <%= link_to 'Team', new_team_path, class:"navbar-item" %>
+              <%= link_to 'New Project', new_project_path, class:"navbar-item" %>
+              <%= link_to 'New Team', new_team_path, class:"navbar-item" %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
