--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -13,14 +13,13 @@
   </div>
 
   <div class="column is-5" :class="{ datastatic: scrollPosition < 100, datafixed: scrollPosition > 100 }">
-    <h2 class="subtitle is-3">{{ team.name }}</h2>
+    <h2 class="subtitle is-3">team.name</h2>
     <table class="table is-fullwidth" v-if="team.users_attributes.length">
       <thead>
-        <th>Name</th>
         <th>Email</th>
       </thead>
       <tr class="user" v-for="(user, index) in team.users_attributes">
-        <td>{{ user.name}}</td><td>{{ user.email}}</td>
+        <td>{{ user.email}}</td>
       </tr>
       </table>
     </div>
