--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Tool</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'tool' %>
   </head>
 
   <body>
@@ -36,7 +38,7 @@
         <div class="navbar-end">
           <% if user_signed_in? %>
           <div class="navbar-item has-dropdown is-hoverable">
-           
+            
             <div class="navbar-dropdown">
               <%= link_to 'New Project', new_project_path, class:"navbar-item" %>
               <%= link_to 'New Team', new_team_path, class:"navbar-item" %>
